common/istio-openshift/kubeflow-istio-resources/base/kf-istio-resources.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: http
      protocol: HTTP
    hosts:
    - "*"
    #tls:
    #  mode: SIMPLE
    #  serverCertificate: /tmp/tls.crt
    #  privateKey: /tmp/tls.key
